--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -73,8 +73,17 @@ button {
 }
 
 @media (max-width: 768px) {
+  html {
+    overflow: auto;
+  }
+
   body {
     background-image: url('/bg-pattern-mobile.svg');
+    overflow: auto;
+  }
+
+  #root {
+    overflow: auto;
   }
 }
 
