--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -31,3 +31,7 @@ body.consulting-page-background .header h1 {
   color: #392962;
 }
 
+body.courses-page-background {
+  background-color: #FED0ED;
+}
+
