added redirect to formats from apply-button

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1974,6 +1974,11 @@
   padding: 40px 150px;
 }
 
+.apply-button button a {
+  color: #FFF4FA;
+  text-decoration: none;
+}
+
 .courses-footer {
   width: 100%;
   background-color: #FFF4FA;
